[gd_scene load_steps=14 format=3 uid="uid://c8mji5lptf2ph"]

[ext_resource type="Script" uid="uid://buh6gpcxc1chx" path="res://SCRIPTS/dev_menu.gd" id="1_rm1js"]
[ext_resource type="Script" uid="uid://dx0e3afmw43l3" path="res://SCRIPTS/dev_scripts.gd" id="1_wpru5"]
[ext_resource type="Script" uid="uid://cygh5i15iy1wi" path="res://SCRIPTS/CONSOLE.gd" id="2_rs6on"]
[ext_resource type="Theme" uid="uid://gb11unwscbj2" path="res://textfont.tres" id="3_rs6on"]
[ext_resource type="Texture2D" uid="uid://dhy4xstfgek1o" path="res://ASSETS/TEXTURES/Arcade/JoyStickSimulator.png" id="5_0eiw2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wpru5"]
bg_color = Color(0, 0, 0, 0.72156864)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.45890838, 0.26862797, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rs6on"]
bg_color = Color(0, 0, 0, 0.5882353)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.6622365, 0.4585778, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7nro"]
atlas = ExtResource("5_0eiw2")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0eiw2"]
atlas = ExtResource("5_0eiw2")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4te8u"]
atlas = ExtResource("5_0eiw2")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsggt"]
atlas = ExtResource("5_0eiw2")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gqh4"]
atlas = ExtResource("5_0eiw2")
region = Rect2(96, 0, 96, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_rm1js"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7nro")
}],
"loop": true,
"name": &"DOWN",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0eiw2")
}],
"loop": true,
"name": &"IDLE",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4te8u")
}],
"loop": true,
"name": &"LEFT",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsggt")
}],
"loop": true,
"name": &"RIGHT",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gqh4")
}],
"loop": true,
"name": &"UP",
"speed": 5.0
}]

[node name="Dev" type="Node2D"]
z_index = 1000
script = ExtResource("1_rm1js")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 11

[node name="DEV" type="Control" parent="CanvasLayer"]
z_index = 1895
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1920.0
offset_top = 1045.0
offset_right = -1420.0
offset_bottom = 1085.0
grow_horizontal = 0
script = ExtResource("1_wpru5")

[node name="Panel" type="Panel" parent="CanvasLayer/DEV"]
z_index = 4095
layout_mode = 0
offset_top = -255.0
offset_right = 745.0
offset_bottom = -5.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wpru5")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/DEV/Panel"]
texture_filter = 1
layout_mode = 0
offset_right = 745.0
offset_bottom = 250.0
theme_override_font_sizes/normal_font_size = 10
theme_override_font_sizes/bold_font_size = 0
scroll_following = true
autowrap_mode = 1
vertical_alignment = 2
script = ExtResource("2_rs6on")
metadata/_edit_use_anchors_ = true

[node name="New day" type="Button" parent="CanvasLayer/DEV"]
layout_mode = 0
offset_right = 108.945
offset_bottom = 30.7
focus_mode = 0
theme = ExtResource("3_rs6on")
theme_override_styles/normal = SubResource("StyleBoxFlat_rs6on")
text = "NEW DAY"

[node name="Game Lost" type="Button" parent="CanvasLayer/DEV"]
layout_mode = 0
offset_left = 758.0
offset_right = 866.945
offset_bottom = 30.7
focus_mode = 0
theme = ExtResource("3_rs6on")
theme_override_styles/normal = SubResource("StyleBoxFlat_rs6on")
text = "LOST GAME"

[node name="Time Skip" type="Button" parent="CanvasLayer/DEV"]
layout_mode = 0
offset_left = 120.0
offset_right = 228.0
offset_bottom = 31.0
focus_mode = 0
theme = ExtResource("3_rs6on")
theme_override_styles/normal = SubResource("StyleBoxFlat_rs6on")
text = "TIME SKIP"

[node name="Clear NPCS" type="Button" parent="CanvasLayer/DEV"]
layout_mode = 0
offset_left = 239.0
offset_right = 347.0
offset_bottom = 31.0
focus_mode = 0
theme = ExtResource("3_rs6on")
theme_override_styles/normal = SubResource("StyleBoxFlat_rs6on")
text = "CLEAR NPCs"

[node name="Restore NPCS" type="Button" parent="CanvasLayer/DEV"]
layout_mode = 0
offset_left = 356.0
offset_right = 464.0
offset_bottom = 31.0
focus_mode = 0
theme = ExtResource("3_rs6on")
theme_override_styles/normal = SubResource("StyleBoxFlat_rs6on")
text = "RESTORE NPCS"

[node name="Save NPCS" type="Button" parent="CanvasLayer/DEV"]
layout_mode = 0
offset_left = 489.0
offset_right = 612.0
offset_bottom = 31.0
focus_mode = 0
theme = ExtResource("3_rs6on")
theme_override_styles/normal = SubResource("StyleBoxFlat_rs6on")
text = "SAVE NPCS"

[node name="Save Shelves" type="Button" parent="CanvasLayer/DEV"]
layout_mode = 0
offset_left = 622.0
offset_right = 745.0
offset_bottom = 31.0
focus_mode = 0
theme = ExtResource("3_rs6on")
theme_override_styles/normal = SubResource("StyleBoxFlat_rs6on")
text = "SAVE SHELVES"

[node name="FPS" type="RichTextLabel" parent="CanvasLayer/DEV"]
layout_mode = 0
offset_top = -296.0
offset_right = 89.91
offset_bottom = -256.0
text = "FPS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Carrying" type="RichTextLabel" parent="CanvasLayer/DEV"]
layout_mode = 0
offset_left = 90.0
offset_top = -296.0
offset_right = 302.28
offset_bottom = -256.0
text = "Carrying:"
vertical_alignment = 1

[node name="JoyStick" type="AnimatedSprite2D" parent="CanvasLayer"]
texture_filter = 1
position = Vector2(853.99994, 922.99994)
scale = Vector2(2.4875, 2.4875)
sprite_frames = SubResource("SpriteFrames_rm1js")
animation = &"LEFT"

[connection signal="pressed" from="CanvasLayer/DEV/New day" to="." method="_on_new_day_pressed"]
[connection signal="pressed" from="CanvasLayer/DEV/Game Lost" to="." method="_on_game_lost_pressed"]
[connection signal="button_down" from="CanvasLayer/DEV/Time Skip" to="." method="_on_time_skip_button_down"]
[connection signal="button_up" from="CanvasLayer/DEV/Time Skip" to="." method="_on_time_skip_button_up"]
[connection signal="pressed" from="CanvasLayer/DEV/Clear NPCS" to="CanvasLayer/DEV" method="_on_clear_npcs_pressed"]
[connection signal="pressed" from="CanvasLayer/DEV/Restore NPCS" to="CanvasLayer/DEV" method="_on_restore_npcs_pressed"]
[connection signal="pressed" from="CanvasLayer/DEV/Save NPCS" to="CanvasLayer/DEV" method="_on_save_npcs_pressed"]
[connection signal="pressed" from="CanvasLayer/DEV/Save Shelves" to="CanvasLayer/DEV" method="_on_save_shelves_pressed"]
